--- a/cssss/csss8.html
+++ b/cssss/csss8.html
@@ -278,5 +278,83 @@
 	
 	<p class="tex">---</p>
 
+	<div id="element">
+		<p class="textt">+++</p>
+		<p class="textt">+++</p>
+		
+		<ul>
+			<li class="textt">---</li>
+			<li class="textt">---</li>
+			<li class="textt">---</li>
+			<li>---</li>
+			<li>---</li>
+		</ul>
+	</div>
+	
+	<p class="textt">---</p>
+
+	<div id="elemenn">
+		<p class="texx">---</p>
+		<p class="texx">---</p>
+		
+		<ul>
+			<li class="texx">+++</li>
+			<li class="texx">+++</li>
+			<li class="texx">+++</li>
+			<li>---</li>
+			<li>---</li>
+		</ul>
+	</div>
+	
+	<p class="texx">---</p>
+	<p>________________________________________</p>
+
+	<p class="ike">
+		This is a paragraph with text.
+	</p>
+	<p class="zkr">
+		This is a paragraph with text.
+	</p>
+	<p class="ckr">
+		This is a paragraph with text.
+	</p>
+	<p class="ike zkr ckr">
+		This is a paragraph with text.
+	</p>
+
+	<p>_________________________________________</p>
+
+	<p class = "bek">
+		THE
+	</p>
+	<p class = "zak">
+		DIVAL
+	</p>
+	<p class = "bek zak">
+		VILD	
+	</p>
+
+	<p class = "bin">
+		OK
+	</p>
+	<p class = "zin">
+		NO
+	</p>
+	<h2 class = "bin zin">
+		ViLD
+	</h2>
+	
+	<div id = "ell">
+		<p class = "baz">
+			Google
+		</p>
+	</div>
+
+	<h2 id = "elemmm">
+		<p class = "bal">
+			blaBLA
+		</p>
+	</h2>
+
 	</body>
 </html>
